[tool.ruff]
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 80

[tool.ruff.lint]
preview = true
select = ["E", "F", "B"]
#select = ["E", "F", "I", "PL", "I", "B"]
ignore = ["B008", "E501"]  # black will take care of line-length violations
ignore-init-module-imports = true
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405", "E501"]
"consts.py" = ["E501"]

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[tool.isort]
profile = "black"
line_length = 80

[tool.uv.sources]
sqlmodel-crud-utilities = { git = "https://github.com/fsecada01/SQLModel-CRUD-Utilities", rev = "83e964f6e7b633e339e45ddcaaa49cd8617fa105" }
#multi_line_output = 3
#include_trailing_comma = true
#force_grid_wrap = 0

[project]
name = "proxy_getter"
authors = [
    { name = "Francis Secada", email = "francis.secada@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "1.0.0b0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "appdirs==1.4.4",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "cssselect==1.2.0",
    "fake-useragent==2.0.3",
    "free-proxy==1.1.3",
    "geographiclib==2.0",
    "geopy==2.4.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httpx-html==0.11.0.dev0",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "loguru==0.7.3",
    "lxml==5.3.1",
    "parse==1.20.2",
    "pydantic-core==2.27.2",
    "pydantic==2.10.5",
    "pyee==11.1.1",
    "pyppeteer==2.0.0",
    "pyquery==2.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "soupsieve==2.6",
    "sqlalchemy-mixins==2.0.5",
    "sqlalchemy==2.0.37",
    "sqlmodel-crud-utilities",
    "sqlmodel==0.0.22",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==1.26.20",
    "w3lib==2.3.1",
    "webencodings==0.5.1",
    "websockets==10.4",
    "win32-setctime==1.2.0",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "alembic==1.14.1",
    "anyio==4.8.0",
    "argon2-cffi-bindings==21.2.0",
    "argon2-cffi==23.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==25.1.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "black==25.1.0",
    "bleach==6.2.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distlib==0.3.9",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.17.0",
    "fqdn==1.5.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "identify==2.6.8",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "isoduration==20.11.0",
    "isort==6.0.1",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server-terminals==0.5.3",
    "jupyter-server==2.15.0",
    "jupyterlab-code-formatter==3.0.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab==4.3.5",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.2",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "nodeenv==1.9.1",
    "notebook-shim==0.2.4",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pre-commit==4.1.0",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pywin32==308",
    "pywinpty==2.0.15",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.23.1",
    "ruff==0.9.8",
    "send2trash==1.8.3",
    "setuptools==75.8.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "stack-data==0.6.3",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "uri-template==1.3.0",
    "urllib3==1.26.20",
    "virtualenv==20.29.2",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
]
