[tool.ruff]
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 80

[tool.ruff.lint]
preview = true
select = ["E", "F", "B"]
#select = ["E", "F", "I", "PL", "I", "B"]
ignore = ["B008", "E501"]  # black will take care of line-length violations
ignore-init-module-imports = true
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405", "E501"]
"consts.py" = ["E501"]

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
[tool.isort]
profile = "black"
line_length = 80

#multi_line_output = 3
#include_trailing_comma = true
#force_grid_wrap = 0

[project]
name = "proxy_getter"
authors = [
    { name = "Francis Secada", email = "francis.secada@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "1.0.0b0"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "free-proxy==1.1.3",
    "geographiclib==2.0",
    "geopy==2.4.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "loguru==0.7.3",
    "lxml==5.3.2",
    "playwright==1.51.0",
    "pydantic-core==2.33.1",
    "pydantic==2.11.3",
    "pyee==12.1.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sqlalchemy-mixins==2.0.5",
    "sqlalchemy==2.0.40",
    "sqlmodel-crud-utilities==0.0.1b0",
    "sqlmodel==0.0.24",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "webencodings==0.5.1",
    "win32-setctime==1.2.0",
]

[dependency-groups]
dev = [
    "alembic==1.15.2",
    "black==25.1.0",
    "cfgv==3.4.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "greenlet==3.1.1",
    "identify==2.6.9",
    "isort==6.0.1",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.7",
    "pre-commit==4.2.0",
    "pyyaml==6.0.2",
    "ruff==0.11.4",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.1",
    "virtualenv==20.30.0",
]
